Decode url in save package download.

Save package does not decode the url when the web content has no title.

Also add some unit tests for special characters.

BUG=654591

Review-Url: https://codereview.chromium.org/2595753002
Cr-Commit-Position: refs/heads/master@{#442710}

Former-commit-id: 0d4d0fd0973238c92bbd629960eeed5b3481b48c