content/browser/download/save_package_unittest.cc
@@ -392,6 +392,24 @@ static const struct SuggestedSaveNameTestCase {
     FPL("bar"),
     false
   },
+  // A URL with escaped special characters, when title matches the URL.
+  { "http://foo.com/%40.txt",
+    base::ASCIIToUTF16("foo.com/%40.txt"),
+    FPL("@.txt"),
+    false
+  },
+  // A URL with unescaped special characters, when title matches the URL.
+  { "http://foo.com/@.txt",
+    base::ASCIIToUTF16("foo.com/@.txt"),
+    FPL("@.txt"),
+    false
+  },
+  // A URL with punycode in the host name, when title matches the URL.
+  { "http://xn--bcher-kva.com",
+    base::UTF8ToUTF16("bücher.com"),
+    FPL("bücher.com"),
+    false
+  },
   // If the title matches the URL, but there is no "filename" component,
   // use the domain.
   { "http://foo.com",
